Fixed left-right alignment of badges

--- a/app/styles/theme/nw-card.scss
+++ b/app/styles/theme/nw-card.scss
@@ -199,7 +199,6 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      flex-wrap: wrap;
       .nw-cms-third-tier-offer {
         padding-bottom: 10px;
         max-width: 200px;
